<resources>
    <!-- Global -->
    <string name="app_name">Third Place</string>
    <string name="app_tagline">Find new shared spaces</string>

    <!-- Text fields -->
    <!-- Buttons -->
    <string name="button_continue">Continue</string>
    <string name="button_addPlace">Add place</string>
    <string name="button_signup">Sign up</string>
    <string name="button_login">Log in</string>
    <string name="button_goBack">Back to map</string>
    <string name="button_delete">Delete</string>
    <string name="button_update">Update</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_addImage">Add image</string>
    <string name="button_updateImage">Update image</string>
    <string name="button_addLocation">Add location</string>


    <!-- Menu -->
    <string name="menu_addPlace">Add</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_update">Update</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>


    <!-- Header messages -->
    <string name="header_addPlace">Add place</string>
    <string name="header_updatePlace">Update place</string>
    <string name="header_login">Welcome back!</string>
    <string name="header_signup">Sign up to Third Place</string>
    <string name="header_map">ThirdPlace Map</string>
    <string name="header_profile">Profile</string>
    <string name="header_settings">Settings</string>
    <string name="header_about">About Third Place</string>
    <string name="header_loginSignup">Sign up or log in below</string>
    <string name="header_savedPlaces">Saved places</string>
    <string name="header_amenities">Select place amenities</string>
    <string name="header_placeType">Select place type</string>


    <!-- Hints -->
    <string name="hint_placeTitle">Add place name here</string>
    <string name="hint_placeDescription">Add place description here</string>
    <string name="hint_userName">Joe Bloggs</string>
    <string name="hint_userEmail">joebloggs@email.com</string>
    <string name="hint_userPassword">Enter password here</string>
    <string name="hint_selectImage">Select image</string>

    <!-- Place Type radio button list -->
    <string name="type_outdoors">Outdoors</string>
    <string name="type_cultural">Cultural</string>
    <string name="type_food">Food+drink</string>
    <string name="type_activity">Activity</string>
    <string name="type_community">Community space</string>

    <!-- Amenities checkbox list -->
    <string name="amenity_free">Free</string>
    <string name="amenity_charging">Charging</string>
    <string name="amenity_toilets">Toilets</string>
    <string name="amenity_shelter">Shelter</string>
    <string name="amenity_quiet">Quiet</string>
    <string name="amenity_membership">Membership required</string>
    <string name="amenity_laptop">Laptop friendly</string>
    <string name="amenity_equipment">Equipment available</string>
    <string name="amenity_alwaysOpen">Always open</string>

    <!-- Error messages -->
    <string name="error_titleTypeMissing">Title and type are required</string>
    <string name="error_titleLength">Title must be less than 25 characters</string>
    <string name="error_descriptionLength">Description must be less than 100 characters</string>
    <string name="error_emptyFields">Please fill in all fields</string>
    <string name="error_email">Please enter a valid email address</string>
    <string name="error_password">Password does not match</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <!--&lt;!&ndash; Place Type radio button list &ndash;&gt;-->
    <!--    <string-array name="placeTypes">-->
    <!--        <item>Outdoors</item>-->
    <!--        <item>Cultural</item>-->
    <!--        <item>Food+drink</item>-->
    <!--        <item>Activity</item>-->
    <!--        <item>Community space</item>-->
    <!--    </string-array>-->

    <!--&lt;!&ndash; Amenities checkbox list &ndash;&gt;-->
    <!--<string-array name="amenities">-->
    <!--    <item>Free</item>-->
    <!--    <item>Charging</item>-->
    <!--    <item>Toilets</item>-->
    <!--    <item>Shelter</item>-->
    <!--    <item>Quiet</item>-->
    <!--    <item>Membership required</item>-->
    <!--    <item>Laptop friendly</item>-->
    <!--    <item>Equipment available</item>-->
    <!--    <item>Always open</item>-->
    <!--</string-array>-->


</resources>