<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlaceCheckboxesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/turquoise"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/orange" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select Amenities" />

                <CheckBox
                    android:id="@+id/checkbox_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amenity_free"/>

                <CheckBox
                    android:id="@+id/checkbox_charging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amenity_charging"/>

                <CheckBox
                    android:id="@+id/checkbox_toilets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amenity_toilets"/>

                <CheckBox
                    android:id="@+id/checkbox_shelter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amenity_shelter"/>

                <CheckBox
                    android:id="@+id/checkbox_quiet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amenity_quiet"/>

                <CheckBox
                    android:id="@+id/checkbox_membership"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amenity_membership"/>

                <CheckBox
                    android:id="@+id/checkbox_laptop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amenity_laptop"/>

                <CheckBox
                    android:id="@+id/checkbox_equipment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amenity_equipment"/>

                <CheckBox
                    android:id="@+id/checkbox_alwaysOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amenity_alwaysOpen"/>


                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/turquoise"
                    android:padding="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addPlace"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>